Bug 295473 - under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty trash automatically when closed
Summary: under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.8
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-07 15:04 UTC by Hussam Al-Tayeb
Modified: 2012-03-18 19:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2012-03-07 15:04:58 UTC
User-Agent:       Mozilla/5.0 (X11; Linux i686; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty trash automatically when closed. it is not grayed out, right clicking on trash and 'empty trash' works.

Reproducible: Always

Steps to Reproduce:
1. set kmail to empty trash on exit.
2. delete emails (send them to trash)
3. right click on trash
Actual Results:  
empty trash is grayed out

Expected Results:  
empty trash should not be grayed out
Comment 1 Hussam Al-Tayeb 2012-03-07 15:21:11 UTC
may need to restart kmail after setting it to empty trash on exit before deleting emails.
Comment 2 Laurent Montel 2012-03-07 15:33:13 UTC
Waou ! don't understand it.
Will look at why it's disable
Comment 3 Laurent Montel 2012-03-07 17:14:55 UTC
Git commit 9146ddb8ce119872372cd6c759c95091e8adbd40 by Montel Laurent.
Committed on 07/03/2012 at 18:13.
Pushed by mlaurent into branch 'master'.

Fix Bug 295473 - under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty trash automatically when closed

Too bad the patch for avoid to delete foldercollection avoid to update collection => so when we change info into (as statistic)
it's not updated so info was the same that it was created.
Too bad that we release 4.8.1 today

FIXED-IN: 4.8.2

M  +2    -0    mailcommon/foldercollection.cpp

http://commits.kde.org/kdepim/9146ddb8ce119872372cd6c759c95091e8adbd40
Comment 4 Laurent Montel 2012-03-07 17:18:30 UTC
Git commit 9a75f0ba3e78faccf634ac4a9e3cc3d1d920b190 by Montel Laurent.
Committed on 07/03/2012 at 18:13.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 295473 - under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty trash automatically when closed

Too bad the patch for avoid to delete foldercollection avoid to update collection => so when we change info into (as statistic)
it's not updated so info was the same that it was created.
Too bad that we release 4.8.1 today

FIXED-IN: 4.8.2
(cherry picked from commit 9146ddb8ce119872372cd6c759c95091e8adbd40)

Conflicts:

	mailcommon/foldercollection.cpp

M  +2    -1    mailcommon/foldercollection.cpp

http://commits.kde.org/kdepim/9a75f0ba3e78faccf634ac4a9e3cc3d1d920b190
Comment 5 Paul L. 2012-03-18 19:58:19 UTC
Kubuntu 12.04 (precise pangolin) 64-bit
KDE 4.8.1
Kontact/Kmail 4.8.0

The option Empty local trash folde on program exit is not checked.

Situation:
Launch Kontact.
Trash folder is empty.
New email is received.
Delete the new email and it goes to the Trash folder.
Right-click on Trash and the option to Empty Trash is grayed out.
Quit Kontact.
Relaunch Kontact.
Right-click on Trash and the option to Empty Trash is available - no longer grayed out.
Delete any new email and it is added to the Trash folder.
Right-click on Trash and the option to Empty Trash is still available.
Leave the Trash Folder alone - do not empty it.
Quit Kontact.
Relaunch Kontact.
Right-click on Trash and the option to Empty Trash is still available.
Delete any new email and it is added to the Trash folder.
Right-click on Trash and the option to Empty Trash is still available.

Repeatable: ALWAYS.