Fix Bug 295473 - under kde 4.8.1 in kmail, empty trash is grayed out if kmail is set to empty trash automatically when closed

Too bad the patch for avoid to delete foldercollection avoid to update collection => so when we change info into (as statistic)
it's not updated so info was the same that it was created.
Too bad that we release 4.8.1 today

FIXED-IN: 4.8.2
BUG: 295473
(cherry picked from commit 9146ddb8ce119872372cd6c759c95091e8adbd40)

Conflicts:

	mailcommon/foldercollection.cpp